--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "axios": "^1.3.4",
     "element-plus": "^2.3.2",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "pinia": "^2.0.32",
-    "pinia-plugin-persistedstate": "^3.1.0",
     "ts-node": "^10.9.1",
     "vue": "^3.2.47",
     "vue-i18n": "^9.1.9",
@@ -24,14 +24,15 @@
   "devDependencies": {
     "@iconify/json": "^2.1.30",
     "@purge-icons/generated": "^0.8.1",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^18.15.11",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
     "babel-plugin-import": "^1.13.6",
-    "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
+    "sass": "^1.62.1",
     "sass-loader": "^13.2.0",
     "tailwindcss": "^3.3.1",
     "typescript": "~4.8.4",
