新增菜单管理，头部栏，优化并格式化了一些代码

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,7 @@
     },
     "strict": true
   },
-  "include": [
-    "env.d.ts",
-    "src/**/*",
-    "src/**/*.vue",
-    "types/**/*.d.ts",
-    "types/**/*.ts"
-  ],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "types/**/*.d.ts", "types/**/*.ts"],
   "references": [
     {
       "path": "./tsconfig.node.json"
