--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build-only": "vite build",
     "dev": "vite",
     "preview": "vite preview",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "eslint-fix": "eslint src/**/*.*  --fix"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -26,10 +27,15 @@
     "@purge-icons/generated": "^0.8.1",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
     "babel-plugin-import": "^1.13.6",
+    "eslint": "^8.51.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-vue": "^9.17.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "sass": "^1.62.1",
@@ -38,6 +44,7 @@
     "typescript": "~4.8.4",
     "unplugin-vue-define-options": "^1.2.4",
     "vite": "^4.1.4",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-purge-icons": "^0.9.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.2.0"
