--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "eslint-fix": "eslint src/**/*.*  --fix"
   },
   "dependencies": {
-    "axios": "^1.3.4",
+    "axios": "^1.4.0",
     "element-plus": "^2.3.2",
     "js-cookie": "^3.0.5",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "mockjs": "^1.1.0",
     "path": "^0.12.7",
     "pinia": "^2.0.32",
     "ts-node": "^10.9.1",
@@ -26,6 +27,8 @@
     "@iconify/json": "^2.1.30",
     "@purge-icons/generated": "^0.8.1",
     "@types/js-cookie": "^3.0.3",
+    "@types/lodash-es": "^4.17.7",
+    "@types/mockjs": "^1.0.7",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
@@ -45,6 +48,7 @@
     "unplugin-vue-define-options": "^1.2.4",
     "vite": "^4.1.4",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-purge-icons": "^0.9.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.2.0"
