--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "path": "^0.12.7",
-    "pinia": "^2.0.32",
+    "pinia": "2.1.4",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "qs": "^6.11.2",
     "ts-node": "^10.9.1",
-    "vue": "^3.2.47",
+    "vue": "^3.3.4",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.1.6"
   },
@@ -30,6 +32,7 @@
     "@types/lodash-es": "^4.17.7",
     "@types/mockjs": "^1.0.7",
     "@types/node": "^18.15.11",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -46,7 +49,7 @@
     "tailwindcss": "^3.3.1",
     "typescript": "~4.8.4",
     "unplugin-vue-define-options": "^1.2.4",
-    "vite": "^4.1.4",
+    "vite": "^4.4.5",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-purge-icons": "^0.9.2",
