--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "pinia": "2.1.4",
     "pinia-plugin-persistedstate": "^3.2.1",
     "qs": "^6.11.2",
+    "three": "^0.150.0",
     "ts-node": "^10.9.1",
     "vue": "^3.3.4",
     "vue-i18n": "^9.1.9",
+    "vue-resize-observer": "^2.0.16",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "@types/mockjs": "^1.0.7",
     "@types/node": "^18.15.11",
     "@types/qs": "^6.9.7",
+    "@types/three": "^0.150.0",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-vue": "^4.0.0",
