--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "d3": "^7.8.5",
     "element-plus": "^2.3.2",
     "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@iconify/json": "^2.1.30",
     "@purge-icons/generated": "^0.8.1",
+    "@types/d3": "^7.4.3",
     "@types/js-cookie": "^3.0.3",
     "@types/lodash-es": "^4.17.7",
     "@types/mockjs": "^1.0.7",
