--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-fix": "eslint src/**/*.*  --fix"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@tweenjs/tween.js": "^18.6.4",
     "axios": "^1.4.0",
     "d3": "^7.8.5",
