--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "axios": "^1.4.0",
     "d3": "^7.8.5",
     "element-plus": "^2.3.2",
+    "esbuild": "^0.19.12",
     "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
+    "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
     "path": "^0.12.7",
     "pinia": "2.1.4",
     "pinia-plugin-persistedstate": "^3.2.1",
     "qs": "^6.11.2",
+    "sortablejs": "^1.15.2",
     "three": "^0.150.0",
     "ts-node": "^10.9.1",
     "vue": "^3.3.4",
@@ -39,6 +42,7 @@
     "@types/mockjs": "^1.0.7",
     "@types/node": "^18.15.11",
     "@types/qs": "^6.9.7",
+    "@types/sortablejs": "^1.15.7",
     "@types/three": "^0.150.0",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
@@ -51,6 +55,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
+    "prettier": "^3.2.4",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.0",
     "tailwindcss": "^3.3.1",
