--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tweenjs/tween.js": "^18.6.4",
     "axios": "^1.4.0",
     "d3": "^7.8.5",
+    "echarts": "^5.4.3",
     "element-plus": "^2.3.2",
     "esbuild": "^0.19.12",
     "js-cookie": "^3.0.5",
