--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "d3": "^7.8.5",
     "echarts": "^5.4.3",
+    "echarts-gl": "^2.0.9",
     "element-plus": "^2.3.2",
     "esbuild": "^0.19.12",
     "js-cookie": "^3.0.5",
