--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "eslint-fix": "eslint src/**/*.*  --fix"
   },
   "dependencies": {
+    "@bytemd/plugin-breaks": "^1.21.0",
+    "@bytemd/plugin-frontmatter": "^1.21.0",
+    "@bytemd/plugin-gemoji": "^1.21.0",
+    "@bytemd/plugin-gfm": "^1.21.0",
+    "@bytemd/plugin-highlight": "^1.21.0",
+    "@bytemd/plugin-math-ssr": "^1.21.0",
+    "@bytemd/plugin-medium-zoom": "^1.21.0",
+    "@bytemd/vue-next": "^1.21.0",
     "@element-plus/icons-vue": "^2.3.1",
     "@tweenjs/tween.js": "^18.6.4",
     "axios": "^1.4.0",
