--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@bytemd/plugin-highlight": "^1.21.0",
     "@bytemd/plugin-math-ssr": "^1.21.0",
     "@bytemd/plugin-medium-zoom": "^1.21.0",
+    "@bytemd/plugin-mermaid": "^1.21.0",
     "@bytemd/vue-next": "^1.21.0",
     "@element-plus/icons-vue": "^2.3.1",
     "@tweenjs/tween.js": "^18.6.4",
