--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
+    "monaco-editor": "^0.46.0",
     "path": "^0.12.7",
     "pinia": "2.1.4",
     "pinia-plugin-persistedstate": "^3.2.1",
