--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "compilerOptions": {
     "allowJs": true,
+    "isolatedModules": true,
+    "strict": true,
     "ignoreDeprecations": "5.0",
     "baseUrl": ".",
     "types": ["vite/client"],
@@ -9,7 +11,6 @@
       "@/*": ["./src/*"],
       "#/*": ["./types/*"]
     },
-    "strict": true,
     "lib": ["dom", "ES2023", "ESNext", "es2018.promise"]
   },
   "include": ["src/**/*", "src/**/*.vue", "types/**/*.d.ts", "types/**/*.ts"],
