--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "run-p type-check build-only",
-    "build-only": "vite build",
+    "build-only": "cross-env NODE_ENV=production NODE_OPTIONS=--max-old-space-size=8192 vite build",
     "dev": "vite",
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit",
@@ -62,6 +62,7 @@
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
     "babel-plugin-import": "^1.13.6",
+    "cross-env": "^7.0.3",
     "eslint": "^8.51.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.17.0",
